--- a/package.json
+++ b/package.json
@@ -21,10 +21,13 @@
     "uuid": "8.1.0"
   },
   "devDependencies": {
+    "@babel/core": ">=7.0.0 <8.0.0",
     "@types/katex": "0.11.0",
     "@types/node": "14.14.31",
     "@types/react": "17.0.2",
+    "dotenv": "^10.0.0",
     "lint-staged": "10.5.4",
+    "node-fetch": "<3.0.0",
     "pre-commit": "1.2.2",
     "prettier": "2.2.1",
     "typescript": "^4.4.4"
